--- a/package.json
+++ b/package.json
@@ -13,27 +13,51 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
   },
   "dependencies": {
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.33",
-    "@types/react-dom": "18.0.11",
+    "@consumet/extensions": "^1.4.17",
+    "@hookform/resolvers": "^3.0.1",
+    "@next-auth/prisma-adapter": "^1.0.5",
+    "@prisma/client": "^4.12.0",
+    "@radix-ui/react-avatar": "^1.0.2",
+    "@radix-ui/react-checkbox": "^1.0.3",
+    "@radix-ui/react-dialog": "^1.0.3",
+    "@radix-ui/react-dropdown-menu": "^2.0.4",
+    "@radix-ui/react-label": "^2.0.1",
+    "@radix-ui/react-popover": "^1.0.5",
+    "@radix-ui/react-separator": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.3",
+    "@radix-ui/react-tooltip": "^1.0.5",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.5.1",
     "clsx": "^1.2.1",
+    "jsonwebtoken": "^9.0.0",
     "lucide-react": "^0.132.0",
     "next": "13.3.0",
-    "next-themes": "^0.2.1",
+    "next-auth": "^4.21.1",
+    "nodemailer": "^6.9.1",
     "postcss": "8.4.21",
+    "postmark": "^3.0.15",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
+    "swiper": "^9.2.0",
+    "swr": "^2.1.3",
+    "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.1",
-    "typescript": "5.0.4"
+    "tailwindcss-animate": "^1.0.5",
+    "typescript": "5.0.4",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/node": "18.15.11",
+    "@types/react": "18.0.33",
+    "@types/react-dom": "18.0.11",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-tailwindcss": "^3.11.0"
+    "eslint-plugin-tailwindcss": "^3.11.0",
+    "prisma": "^4.12.0"
   }
 }
