--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-separator": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.0.5",
+    "@vercel/analytics": "^0.1.11",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.5.1",
     "clsx": "^1.2.1",
@@ -37,7 +38,7 @@
     "nodemailer": "^6.9.1",
     "postcss": "8.4.21",
     "postmark": "^3.0.15",
-    "react": "18.2.0",
+    "react": "link:@vercel/analytics/react",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "swiper": "^9.2.0",
