--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-checkbox": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
+    "@radix-ui/react-hover-card": "^1.0.5",
     "@radix-ui/react-label": "^2.0.1",
     "@radix-ui/react-navigation-menu": "^1.1.2",
     "@radix-ui/react-popover": "^1.0.5",
@@ -38,9 +39,10 @@
     "nodemailer": "^6.9.1",
     "postcss": "8.4.21",
     "postmark": "^3.0.15",
-    "react": "link:@vercel/analytics/react",
+    "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "sharp": "^0.32.0",
     "swiper": "^9.2.0",
     "swr": "^2.1.3",
     "tailwind-merge": "^1.12.0",
