--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-separator": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.0.5",
+    "@reduxjs/toolkit": "^1.9.5",
     "@vercel/analytics": "^0.1.11",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.5.1",
@@ -42,6 +43,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-redux": "^8.0.5",
     "sharp": "^0.32.0",
     "swiper": "^9.2.0",
     "swr": "^2.1.3",
