--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "turbo": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -26,6 +27,7 @@
     "@radix-ui/react-navigation-menu": "^1.1.2",
     "@radix-ui/react-popover": "^1.0.5",
     "@radix-ui/react-separator": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.0.5",
     "@reduxjs/toolkit": "^1.9.5",
@@ -35,8 +37,8 @@
     "clsx": "^1.2.1",
     "jsonwebtoken": "^9.0.0",
     "lucide-react": "^0.132.0",
-    "next": "13.3.0",
-    "next-auth": "^4.21.1",
+    "next": "13.3.1",
+    "next-auth": "^4.22.1",
     "nodemailer": "^6.9.1",
     "postcss": "8.4.21",
     "postmark": "^3.0.15",
@@ -44,6 +46,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-redux": "^8.0.5",
+    "react-share": "^4.4.1",
     "sharp": "^0.32.0",
     "swiper": "^9.2.0",
     "swr": "^2.1.3",
