--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nextui-org/navbar": "^2.0.26",
     "@nextui-org/system": "^2.0.14",
     "@nextui-org/theme": "^2.1.16",
+    "@t3-oss/env-nextjs": "^0.7.1",
     "@upstash/ratelimit": "^0.4.4",
     "@upstash/redis": "^1.24.3",
     "clsx": "^2.0.0",
@@ -36,7 +37,8 @@
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwind-merge": "^2.0.0"
+    "tailwind-merge": "^2.0.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.8.1",
