--- a/package.json
+++ b/package.json
@@ -14,30 +14,46 @@
     "type-check": "tsc --noEmit",
     "fmt": "prettier --write \"**/*.{ts,tsx,mdx,json}\" --cache",
     "fmt:check": "prettier --check \"**/*.{ts,tsx,mdx,json}\" --cache",
+    "db:generate": "drizzle-kit generate:pg",
+    "db:push": "drizzle-kit push:pg",
+    "db:studio": "drizzle-kit studio",
+    "db:introspect": "drizzle-kit introspect:pg",
     "prepare": "husky install"
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^0.3.5",
+    "@hookform/resolvers": "^3.3.2",
     "@nextui-org/avatar": "^2.0.24",
     "@nextui-org/button": "^2.0.25",
+    "@nextui-org/card": "^2.0.24",
     "@nextui-org/chip": "^2.0.25",
     "@nextui-org/divider": "^2.0.24",
     "@nextui-org/dropdown": "^2.1.15",
     "@nextui-org/image": "^2.0.24",
+    "@nextui-org/input": "^2.1.16",
     "@nextui-org/link": "^2.0.26",
     "@nextui-org/navbar": "^2.0.26",
     "@nextui-org/system": "^2.0.14",
     "@nextui-org/theme": "^2.1.16",
+    "@nextui-org/tooltip": "^2.0.28",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@upstash/ratelimit": "^0.4.4",
     "@upstash/redis": "^1.24.3",
+    "bcryptjs": "^2.4.3",
     "clsx": "^2.0.0",
+    "drizzle-orm": "^0.29.0",
     "framer-motion": "^10.16.4",
     "geist": "^1.0.1",
     "next": "14.0.2",
+    "next-auth": "^4.24.4",
     "next-themes": "^0.2.1",
+    "postgres": "^3.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.48.2",
+    "sonner": "^1.2.0",
     "tailwind-merge": "^2.0.0",
+    "unique-username-generator": "^1.2.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -45,18 +61,21 @@
     "@commitlint/config-conventional": "^17.8.1",
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@total-typescript/ts-reset": "^0.5.1",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "20.8.10",
     "@types/react": "18.2.35",
     "@types/react-dom": "18.2.14",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
     "autoprefixer": "10.4.16",
+    "drizzle-kit": "^0.20.1",
     "eslint": "8.53.0",
     "eslint-config-next": "14.0.1",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
     "husky": "^8.0.3",
     "lint-staged": "^15.0.2",
+    "pg": "^8.11.3",
     "postcss": "8.4.31",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.6",
