--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^0.3.5",
+    "@consumet/extensions": "^1.5.4",
     "@hookform/resolvers": "^3.3.2",
     "@nextui-org/avatar": "^2.0.24",
     "@nextui-org/button": "^2.0.25",
@@ -31,22 +32,30 @@
     "@nextui-org/dropdown": "^2.1.15",
     "@nextui-org/image": "^2.0.24",
     "@nextui-org/input": "^2.1.16",
+    "@nextui-org/kbd": "^2.0.25",
     "@nextui-org/link": "^2.0.26",
+    "@nextui-org/modal": "^2.0.28",
     "@nextui-org/navbar": "^2.0.26",
     "@nextui-org/system": "^2.0.14",
     "@nextui-org/theme": "^2.1.16",
     "@nextui-org/tooltip": "^2.0.28",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@upstash/ratelimit": "^0.4.4",
     "@upstash/redis": "^1.24.3",
+    "artplayer": "^5.0.9",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.0.0",
+    "cmdk": "^0.2.0",
     "drizzle-orm": "^0.29.0",
     "framer-motion": "^10.16.4",
     "geist": "^1.0.1",
-    "next": "14.0.2",
+    "hls.js": "^1.4.12",
+    "jotai": "^2.5.1",
+    "next": "14.0.3",
     "next-auth": "^4.24.4",
     "next-themes": "^0.2.1",
+    "nuka-carousel": "^7.0.0",
     "postgres": "^3.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -60,6 +69,7 @@
     "@commitlint/cli": "^17.8.1",
     "@commitlint/config-conventional": "^17.8.1",
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
+    "@swc-jotai/react-refresh": "^0.1.0",
     "@total-typescript/ts-reset": "^0.5.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "20.8.10",
@@ -70,7 +80,7 @@
     "autoprefixer": "10.4.16",
     "drizzle-kit": "^0.20.1",
     "eslint": "8.53.0",
-    "eslint-config-next": "14.0.1",
+    "eslint-config-next": "14.0.3",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
     "husky": "^8.0.3",
